Added copy and save

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "dom-to-image": "^2.6.0",
     "next": "^12.0.7",
     "postcss": "^8.4.5",
     "react": "17.0.2",
