--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "classnames": "^2.3.1",
     "dom-to-image": "^2.6.0",
     "next": "^12.0.7",
     "postcss": "^8.4.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1",
     "sass": "^1.43.4",
     "tailwindcss": "^3.0.7"
   }
